Fix z-index issue on chronology figure-screen expand.

--- a/src/sass/components/yith/components/_figure.scss
+++ b/src/sass/components/yith/components/_figure.scss
@@ -12,6 +12,7 @@
       position: relative;
       overflow: hidden;
       box-shadow: $box-shadow;
+      z-index: 0;
 
       a,
       a:visited {
